--- a/Battle of Neighborhoods.ipynb
+++ b/Battle of Neighborhoods.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "It must be noted that the choice of features to represent neighborhoods is subjective and must be tailored to the end user (Alex in our case). The above features are by no means *the* unique combination to represent a neighborhood but merely provide a good starting point to illustrate the methodology used in this project. \n",
     "\n",
-    "Datasets for features under the \"People\" category can be obtained through a combination of wikipedia and census data available online. Data for the \"Places\" category can be retrived from the Foursquare database through their Places API. Finally, the latitude and longitude coordinates of the candidate neighborhoods can be obtained using the Python Geopy library."
+    "Datasets for features under the \"People\" category can be obtained through a combination of wikipedia and census data available online. Data for the \"Places\" category can be retrieved from the Foursquare database through their Places API. Finally, the latitude and longitude coordinates of the candidate neighborhoods can be obtained using the Python Geopy library."
    ]
   },
   {
@@ -787,7 +787,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, we have a reasonably good spread of neighborhoods throughout the city with a few odd sparse and dense locations. Depending on the use case, it might be necesary to revisit the list of neighborhoods that were dropped when we merged the two mismatching data frames earlier. However, for our purposes, the above samples are sufficient. "
+    "As we can see, we have a reasonably good spread of neighborhoods throughout the city with a few odd sparse and dense locations. Depending on the use case, it might be necessary to revisit the list of neighborhoods that were dropped when we merged the two mismatching data frames earlier. However, for our purposes, the above samples are sufficient. "
    ]
   },
   {
@@ -1306,7 +1306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results from the Foursquare API has been stored in the *Calgary_venues* dataframe. The data frame contains all the venues and venue categories for each neighborhood. There are a total of `196 unique categories returned from the Foursquare API.\n",
+    "The results from the Foursquare API has been stored in the *Calgary_venues* dataframe. The data frame contains all the venues and venue categories for each neighborhood. There are a total of 196 unique categories returned from the Foursquare API.\n",
     "\n",
     "We will now encode all the categories for each neighborhood using one-hot encoding. The result is a new dataframe containing all the categories as separate columns with either a \"1\" indicating that that category is in proximity to the neighborhood or \"0\" otherwise."
    ]
@@ -1796,7 +1796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above data frame can be interpreted as the relative occurance of each venue for a given neighborhood. For example, the category \"Wings Joint\" is one amongst three venues that are in proximity to Abbeydale. \n",
+    "The above data frame can be interpreted as the relative occurrence of each venue for a given neighborhood. For example, the category \"Wings Joint\" is one amongst three venues that are in proximity to Abbeydale. \n",
     "\n",
     "Let us transform this data frame to be a little bit more intuitive. Rather than the relative occurance, we will sort each neighborhood by the 1st, 2nd and 3rd most common venues in proximity to that neighborhood."
    ]
@@ -3255,7 +3255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As it turns out, clustering in high dimensions is a bit tricky. Our traditional \"distance\" metric to measure similarity between two sample points tends to zero as the number of dimensions increase. That is, any two data points will have a distance value close to zero if the feature space dimensionality is very high. This can be verified to some extent by playing with the epsilon parameter in the DBSCAN algorithm and visualizing the effect (or lack there of) on the labels.  "
+    "As it turns out, clustering in high dimensions is a bit tricky. Our traditional \"distance\" metric to measure similarity between two sample points tends to zero as the number of dimensions increase. That is, any two data points will have a distance value close to zero if the feature space dimensionality is very high. This can be verified to some extent by playing with the epsilon parameter in the DBSCAN algorithm and visualizing the effect (or lack thereof) on the labels.  "
    ]
   },
   {
@@ -4040,6 +4040,13 @@
     "Location Information - Foursquare API\n",
     "https://developer.foursquare.com/docs/places-api/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
